--- a/apworlds.html
+++ b/apworlds.html
@@ -51,7 +51,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (192)</h2>
+                <h2>APWorlds (196)</h2>
 
                 <small><a href="#AHatInTime">A Hat in Time (PC)</a></small>
                 <small><a href="#ALinkToThePast">A Link to the Past (SNES)</a></small>
@@ -104,6 +104,7 @@
                 <small><a href="#Factorio">Factorio (PC)</a></small>
                 <small><a href="#Faxanadu">Faxanadu (NES)</a></small>
                 <small><a href="#FinalFantasy1">Final Fantasy 1 (NES)</a></small>
+                <small><a href="#FinalFantasy4FreeEnterprise">Final Fantasy 4 Free Enterprise (SNES)</a></small>
                 <small><a href="#FinalFantasy5CareerDay">Final Fantasy 5 Career Day (SNES)</a></small>
                 <small><a href="#FinalFantasy6WorldsCollide">Final Fantasy 6 Worlds Collide (SNES)</a></small>
                 <small><a href="#FinalFantasyMysticQuest">Final Fantasy Mystic Quest (SNES)</a></small>
@@ -115,6 +116,7 @@
                 <small><a href="#FreddyFazbearsPizzeriaSimulator">Freddy Fazbear's Pizzeria Simulator (PC)</a></small>
                 <small><a href="#GauntletLegends">Gauntlet Legends (N64)</a></small>
                 <small><a href="#GrimDawn">Grim Dawn (PC)</a></small>
+                <small><a href="#GuildWars2">Guild Wars 2 (PC)</a></small>
                 <small><a href="#Hades">Hades (PC)</a></small>
                 <small><a href="#Hammerwatch">Hammerwatch (PC)</a></small>
                 <small><a href="#HatsuneMikuProjectDIVAMegaMix">Hatsune Miku: Project DIVA Mega Mix+ (PC)</a></small>
@@ -158,6 +160,7 @@
                 <small><a href="#MetroCUBEvania">MetroCUBEvania (PICO-8)</a></small>
                 <small><a href="#MetroidPrime">Metroid Prime (GC)</a></small>
                 <small><a href="#MetroidZeroMission">Metroid: Zero Mission (GBA)</a></small>
+                <small><a href="#Mindustry">Mindustry (PC)</a></small>
                 <small><a href="#Minecraft">Minecraft (PC)</a></small>
                 <small><a href="#MinecraftDig">Minecraft Dig (PC)</a></small>
                 <small><a href="#Minit">Minit (PC)</a></small>
@@ -223,6 +226,7 @@
                 <small><a href="#TheBindingOfIssacRepentance">The Binding of Isaac: Repentance (PC)</a></small>
                 <small><a href="#TheGuardianLegend">The Guardian Legend (NES)</a></small>
                 <small><a href="#TheLegendOfZelda">The Legend of Zelda (NES)</a></small>
+                <small><a href="#TheLegendOfZeldaALinkBetweenWorlds">The Legend of Zelda: A Link Between Worlds (3DS)</a></small>
                 <small><a href="#TheMessenger">The Messenger (PC)</a></small>
                 <small><a href="#TheWindWaker">The Wind Waker (GC)</a></small>
                 <small><a href="#TheWitness">The Witness (PC)</a></small>
@@ -709,6 +713,13 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/917510025461776445">Link</a>]</li>
                 </ul>
 
+                <h3><span id="FinalFantasy4FreeEnterprise"></span> Final Fantasy 4 Free Enterprise (SNES)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Rosalie-A/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1170144930610557008">Link</a>]</li>
+                </ul>
+
                 <h3><span id="FinalFantasy5CareerDay"></span> Final Fantasy 5 Career Day (SNES)</h3>
 
                 <ul>
@@ -720,7 +731,7 @@
                 <h3><span id="FinalFantasy6WorldsCollide"></span> Final Fantasy 6 Worlds Collide (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1022545979146252288/1274462779213873192">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1022545979146252288/1276343546898550904">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/TheBigSalarius/FF6-Worlds-Collide-EmoTracker-pack">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://docs.google.com/document/d/1ZN-eO3ZasTEAReGCRP7l9tgI-kEh0GG4gJxVv7JOlyk/edit#heading=h.1zborqwokvgu">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1022545979146252288">Link</a>]</li>
@@ -778,7 +789,7 @@
                 <h3><span id="FreddyFazbearsPizzeriaSimulator"></span> Freddy Fazbear's Pizzeria Simulator (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1273742617133322260">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1078423429310582806/1276327269995905055">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1078423429310582806">Link</a>]</li>
                 </ul>
 
@@ -795,8 +806,16 @@
                 <ul>
                     <li><strong>APWorld + Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1114646643225137224/1266462433497583667">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/routhken/Grim_Dawn_tracker/releases">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> Read it in the Discod thread [<a href="https://discord.com/channels/731205301247803413/1114646643225137224/1212473211820707901">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1114646643225137224/1212473211820707901">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1114646643225137224">Link</a>]</li>
+                </ul>
+
+                <h3><span id="GuildWars2"></span> Guild Wars 2 (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Feldar99/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Feldar99/Archipelago/blob/main/worlds/gw2/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1247738360160587787">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Hades"></span> Hades (PC)</h3>
@@ -1170,6 +1189,14 @@
                     <li><strong>APWorld</strong> [<a href="https://github.com/lilDavid/Archipelago-Metroid-Zero-Mission/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/ladybunne/MetroidZeroMission_PopTrackerPack/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1106280250528235620">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Mindustry"></span> Mindustry (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/JohnMahglass/Archipelago-Mindustry/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/JohnMahglass/Mindustry-Archipelago-Randomizer/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1160797230161211472">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Minecraft"></span> Minecraft (PC)</h3>
@@ -1626,7 +1653,7 @@
                     <li><strong>Game Mod</strong> 5.x.x releases [<a href="https://github.com/agilbert1412/StardewArchipelago/releases">Link</a>]</li>
                     <li><strong>Optional Game Mods</strong> [<a href="https://github.com/agilbert1412/StardewArchipelago/blob/5.x.x/Documentation/Supported%20Mods.md">Link</a>]</li>
                     <li><strong>Beta APWorld + Game Mod</strong> 6.x.x releases [<a href="https://github.com/agilbert1412/StardewArchipelago/releases">Link</a>]</li>
-                    <li><strong>Alternate APWorld + Game Mod</strong> Tilesanity - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1225426679904866324/1263888580254634116">Link</a>]</li>
+                    <li><strong>Alternate APWorld + Game Mod</strong> Tilesanity - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1225426679904866324/1276505292313595914">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Stardew%20Valley/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090823633099833464">Link</a>]</li>
                 </ul>
@@ -1744,6 +1771,14 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090821869340467332">Link</a>]</li>
                 </ul>
 
+                <h3><span id="TheLegendOfZeldaALinkBetweenWorlds"></span> The Legend of Zelda: A Link Between Worlds (3DS)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/randomsalience/albw-archipelago/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/randomsalience/albw-archipelago/blob/main/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1183624197935730758">Link</a>]</li>
+                </ul>
+
                 <h3><span id="TheMessenger"></span> The Messenger (PC)</h3>
 
                 <ul>
@@ -1781,7 +1816,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Jarno458/TsRandomizer/releases">Link</a>]</li>
-                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/893636303630000169/1272273047801303154">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/893636303630000169/1275406173876518993">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Timespinner/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/893636303630000169">Link</a>]</li>
                 </ul>
