--- a/index.html
+++ b/index.html
@@ -45,6 +45,82 @@
                     </p>
                 </header>
 
+                <h2 id="D20240813">Week of August 19-25, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Bloons TD 6 [<a href="apworlds.html#BloonsTD6">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy 6 Worlds Collide [<a href="apworlds.html#FinalFantasy6WorldsCollide">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics Advance [<a href="apworlds.html#FinalFantasyTacticsAdvance">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy XII Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Jak and Dakster [<a href="apworlds.html#JakAndDaxter">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Majora's Mask [<a href="apworlds.html#MajorasMask">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X2 [<a href="apworlds.html#MegaManX2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yu-Gi-Oh! Forbidden Memories [<a href="apworlds.html#YuGiOhForbiddenMemories">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Timespinner [<a href="apworlds.html#Timespinner">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Bloons TD 6 [<a href="apworlds.html#BloonsTD6">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Final Fantasy XII Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Majora's Mask [<a href="apworlds.html#MajorasMask">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Muse Dash [<a href="apworlds.html#MuseDash">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Final Fantasy 4 Free Enterprise [<a href="apworlds.html#FinalFantasy4FreeEnterprise">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Guild Wars 2 [<a href="apworlds.html#GuildWars2">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Mindustry [<a href="apworlds.html#Mindustry">Link</a>]</li>
+                    <li><strong>New APWorld</strong> The Legend of Zelda: A Link Between Worlds [<a href="apworlds.html#TheLegendOfZeldaALinkBetweenWorlds">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game Merged</strong> Mega Man 2 [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3256">Link</a>]</li>
+                    <li><strong>New Game Merged</strong> Yacht Dice [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3482">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Hades [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3815">Link</a>]</li>
+                    <li><strong>New Game PR Opened</strong> Kingdom Hearts RE: Chain of Memories [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3819">Link</a>]</li>
+                    <li><strong>New Game PR Opened</strong> Mega Man X [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3842">Link</a>]</li>
+                    <li><strong>New Game PR Opened</strong> Mega Man X2 [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3843">Link</a>]</li>
+                    <li><strong>New Game PR Opened</strong> Mega Man X3 [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3844">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240812">Week of August 12-18, 2024</h2>
 
                 <ul>
