--- a/apworlds.html
+++ b/apworlds.html
@@ -51,7 +51,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (196)</h2>
+                <h2>APWorlds (201)</h2>
 
                 <small><a href="#AHatInTime">A Hat in Time (PC)</a></small>
                 <small><a href="#ALinkToThePast">A Link to the Past (SNES)</a></small>
@@ -122,6 +122,7 @@
                 <small><a href="#HatsuneMikuProjectDIVAMegaMix">Hatsune Miku: Project DIVA Mega Mix+ (PC)</a></small>
                 <small><a href="#Heretic">Heretic (PC)</a></small>
                 <small><a href="#HollowKnight">Hollow Knight (PC)</a></small>
+                <small><a href="#Huniepop2DoubleDate">Huniepop 2: Double Date (PC)</a></small>
                 <small><a href="#Hylics2">Hylics 2 (PC)</a></small>
                 <small><a href="#Inscryption">Inscryption (PC)</a></small>
                 <small><a href="#IntoTheBreach">Into the Breach (PC)</a></small>
@@ -143,6 +144,7 @@
                 <small><a href="#Lingo">Lingo (PC)</a></small>
                 <small><a href="#LinksAwakeningDX">Link's Awakening DX (GBC)</a></small>
                 <small><a href="#LittleWitchNobeta">Little Witch Nobeta (PC)</a></small>
+                <small><a href="#LocalYAMLCreator">Local YAML Creator (Meta)</a></small>
                 <small><a href="#Lufia2AncientCave">Lufia II Ancient Cave (SNES)</a></small>
                 <small><a href="#Lunacid">Lunacid (PC)</a></small>
                 <small><a href="#MajorasMask">Majora's Mask (N64/PC)</a></small>
@@ -171,7 +173,9 @@
                 <small><a href="#OcarinaOfTimeMQWaterTemple">Ocarina of Time but it's just Master Quest Water Temple (N64)</a></small>
                 <small><a href="#OldSchoolRunescape">Old School Runescape (PC)</a></small>
                 <small><a href="#OpenRCT2">OpenRCT2 (PC)</a></small>
+                <small><a href="#OracleOfAges">Oracle of Ages (GBC)</a></small>
                 <small><a href="#OracleOfSeasons">Oracle of Seasons (GBC)</a></small>
+                <small><a href="#OriAndTheBlindForest">Ori and the Blind Forest (PC)</a></small>
                 <small><a href="#Osu">osu! (PC)</a></small>
                 <small><a href="#OuterWilds">Outer Wilds (PC)</a></small>
                 <small><a href="#Overcooked2">Overcooked! 2 (PC)</a></small>
@@ -231,6 +235,7 @@
                 <small><a href="#TheWindWaker">The Wind Waker (GC)</a></small>
                 <small><a href="#TheWitness">The Witness (PC)</a></small>
                 <small><a href="#Timespinner">Timespinner (PC)</a></small>
+                <small><a href="#ToejamAndEarl">Toejam & Earl (GEN)</a></small>
                 <small><a href="#TUNIC">TUNIC (PC)</a></small>
                 <small><a href="#Tyrian">Tyrian (PC)</a></small>
                 <small><a href="#ULTRAKILL">ULTRAKILL (PC)</a></small>
@@ -350,9 +355,8 @@
                 <h3><span id="ApeEscape"></span> Ape Escape (PSX)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/CDRomatron/Archipelago-Ape-Escape/releases">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1168645708103028856/1279505267784159344">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/lurch9229/Ape-Escape-Tracker/releases">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> [<a href="https://github.com/CDRomatron/Archipelago-Ape-Escape/releases/tag/v0.3">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1168645708103028856">Link</a>]</li>
                 </ul>
 
@@ -717,6 +721,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Rosalie-A/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/seto10987/Final-Fantasy-4-Free-Enterprise-AP-Poptracker-Pack/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1170144930610557008">Link</a>]</li>
                 </ul>
 
@@ -758,6 +763,7 @@
 
                 <ul>
                     <li><strong>APWorld + Game Mod + Setup Guide</strong> [<a href="https://github.com/Bartz24/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/nivomi/ffxii-poptracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1229091295465570456">Link</a>]</li>
                 </ul>
 
@@ -864,6 +870,14 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/ArchipelagoMW-HollowKnight/Archipelago.APMapMod/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Hollow%20Knight/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/959203442570715176">Link</a>]</li>
+                </ul>
+
+                <h3><span id="HuniePop2DoubleDate"></span> HuniePop 2: Double Date (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop2-APWorld/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HunniePop2-Archipelago-Client/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1186790496505450526">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Hylics2"></span> Hylics 2 (PC)</h3>
@@ -1047,6 +1061,13 @@
                     <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/danielgruethling/RandomizedWitchNobeta/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/danielgruethling/Archipelago/blob/game_lwn/worlds/little_witch_nobeta/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1170655339323080796">Link</a>]</li>
+                </ul>
+
+                <h3><span id="LocalYAMLCreator"></span> Local YAML Creator (Meta)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Silvris/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1278481800577941678">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Lufia2AncientCave"></span> Lufia II Ancient Cave (SNES)</h3>
@@ -1284,6 +1305,14 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1095746758774108240">Link</a>]</li>
                 </ul>
 
+                <h3><span id="OracleOfAges"></span> Oracle of Ages (GBC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/SenPierre/ArchipelagoOoA/releases/latest">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/SenPierre/ArchipelagoOoA/blob/oos/worlds/tloz_ooa/docs/ooa_setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1279722186902601750">Link</a>]</li>
+                </ul>
+
                 <h3><span id="OracleOfSeasons"></span> Oracle of Seasons (GBC)</h3>
 
                 <ul>
@@ -1292,6 +1321,14 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/seto10987/Oracle-of-Seasons-AP-Poptracker-Pack/releases/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Dinopony/Archipelago/blob/oos/worlds/tloz_oos/docs/oos_setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1130706151303041054">Link</a>]</li>
+                </ul>
+
+                <h3><span id="OriAndTheBlindForest"></span> Ori and the Blind Forest (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/c-ostic/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/c-ostic/OriBFArchipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1036405779726610452">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Osu"></span> osu! (PC)</h3>
@@ -1775,6 +1812,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/randomsalience/albw-archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/Triillian/ALBW-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/randomsalience/albw-archipelago/blob/main/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1183624197935730758">Link</a>]</li>
                 </ul>
@@ -1819,6 +1857,13 @@
                     <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/893636303630000169/1275406173876518993">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Timespinner/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/893636303630000169">Link</a>]</li>
+                </ul>
+
+                <h3><span id="ToejamAndEarl"></span> Toejam & Earl (GEN)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1204326236415856671/1279386992660058162">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1204326236415856671">Link</a>]</li>
                 </ul>
 
                 <h3><span id="TUNIC"></span> TUNIC (PC)</h3>
