--- a/index.html
+++ b/index.html
@@ -45,6 +45,63 @@
                     </p>
                 </header>
 
+                <h2 id="D20240813">Week of August 26 - September 1, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ape Escape [<a href="apworlds.html#ApeEscape">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Bloons TD 6 [<a href="apworlds.html#BloonsTD6">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Castlevania: Symphony of the Night [<a href="apworlds.html#CastlevaniaSymphonyOfTheNight">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Majora's Mask [<a href="apworlds.html#MajorasMask">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Anodyne [<a href="apworlds.html#Anodyne">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Bloons TD 6 [<a href="apworlds.html#BloonsTD6">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Overcooked! 2 [<a href="apworlds.html#Overcooked2">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Huniepop 2: Double Date [<a href="apworlds.html#Huniepop2DoubleDate">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Local YAML Creator [<a href="apworlds.html#LocalYAMLCreator">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Oracle of Ages [<a href="apworlds.html#OracleOfAges">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Toejam & Earl [<a href="apworlds.html#ToejamAndEarl">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Final Fantasy 4 Free Enterprise [<a href="apworlds.html#FinalFantasy4FreeEnterprise">Link</a>]</li>
+                    <li><strong>New Tracker</strong> Final Fantasy XII Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
+                    <li><strong>New Tracker</strong> The Legend of Zelda: A Link Between Worlds [<a href="apworlds.html#TheLegendOfZeldaALinkBetweenWorlds">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240813">Week of August 19-25, 2024</h2>
 
                 <ul>
