--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                     <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
                     <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> Majora's Mask [<a href="apworlds.html#MajorasMask">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> Pokemon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokémon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Legend of Zelda: Majora's Mask [<a href="apworlds.html#TheLegendOfZeldaMajorasMask">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -84,21 +84,21 @@
                     <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Overcooked! 2 [<a href="apworlds.html#Overcooked2">Link</a>]</li>
-                    <li><strong>Game Mod Update</strong> shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>New APWorld</strong> Huniepop 2: Double Date [<a href="apworlds.html#Huniepop2DoubleDate">Link</a>]</li>
                     <li><strong>New APWorld</strong> Local YAML Creator [<a href="apworlds.html#LocalYAMLCreator">Link</a>]</li>
-                    <li><strong>New APWorld</strong> Oracle of Ages [<a href="apworlds.html#OracleOfAges">Link</a>]</li>
                     <li><strong>New APWorld</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
+                    <li><strong>New APWorld</strong> The Legend of Zelda: Oracle of Ages [<a href="apworlds.html#TheLegendOfZeldaOracleOfAges">Link</a>]</li>
                     <li><strong>New APWorld</strong> Toejam & Earl [<a href="apworlds.html#ToejamAndEarl">Link</a>]</li>
                 </ul>
 
                 <ul>
-                    <li><strong>New Tracker</strong> Final Fantasy 4 Free Enterprise [<a href="apworlds.html#FinalFantasy4FreeEnterprise">Link</a>]</li>
-                    <li><strong>New Tracker</strong> Final Fantasy XII Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
+                    <li><strong>New Tracker</strong> Final Fantasy IV [<a href="apworlds.html#FinalFantasy4">Link</a>]</li>
+                    <li><strong>New Tracker</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasy12OpenWorld">Link</a>]</li>
                     <li><strong>New Tracker</strong> The Legend of Zelda: A Link Between Worlds [<a href="apworlds.html#TheLegendOfZeldaALinkBetweenWorlds">Link</a>]</li>
                 </ul>
 
