--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <style type="text/css">
             html,body{margin:0;padding:0}
             h1,h2,h3{margin-top:0;line-height:1.2;padding-top:10px}
-            :root{--bg:white;--text:#444;--link:#0000EE;--link-visited:#551A8B;}
-            @media(prefers-color-scheme:dark){:root{--bg:#333;--text:#F0F0F0;--link:#7575FF;--link-visited:#9670B9;;}}
-            #color-mode:checked ~ * {--bg:#333;--text:#F0F0F0;--link:#7575FF;--link-visited:#9670B9;}
-            @media (prefers-color-scheme:dark) {#color-mode:checked ~ * {--bg:white;--text:#444;--link:#7575FF;--link-visited:#9670B9;}}
+            :root{--bg:white;--text:#444;--link:#0000EE;--link-visited:#0000EE;}
+            @media(prefers-color-scheme:dark){:root{--bg:#333;--text:#F0F0F0;--link:#7575FF;--link-visited:#7575FF;;}}
+            #color-mode:checked ~ * {--bg:#333;--text:#F0F0F0;--link:#7575FF;--link-visited:#7575FF;}
+            @media (prefers-color-scheme:dark) {#color-mode:checked ~ * {--bg:white;--text:#444;--link:#7575FF;--link-visited:#7575FF;}}
             .color-scheme-wrapper {min-height: 100vh;background:var(--bg);color:var(--text);}
             .color-scheme-wrapper a {color:var(--link);}
             .color-scheme-wrapper a:visited {color:var(--link-visited);}
