--- a/apworlds.html
+++ b/apworlds.html
@@ -932,7 +932,7 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/959203442570715176">Link</a>]</li>
                 </ul>
 
-                <h3><span id="HuniePop2DoubleDate"></span> HuniePop 2: Double Date (PC)</h3>
+                <h3><span id="Huniepop2DoubleDate"></span> HuniePop 2: Double Date (PC)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/DotsofdarknessArchipelago/HuniePop2-APWorld/releases">Link</a>]</li>
