--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <li><strong>APWorld Update</strong> Final Fantasy Tactics Advance [<a href="apworlds.html#FinalFantasyTacticsAdvance">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Final Fantasy XII Open World [<a href="apworlds.html#FinalFantasyXIIOpenWorld">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> Jak and Dakster [<a href="apworlds.html#JakAndDaxter">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Jak and Daxter [<a href="apworlds.html#JakAndDaxter">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Majora's Mask [<a href="apworlds.html#MajorasMask">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
