--- a/apworlds.html
+++ b/apworlds.html
@@ -51,7 +51,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (204)</h2>
+                <h2>APWorlds (206)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#Manual">Manual (Meta)</a></small>
@@ -68,6 +68,7 @@
                 <small><a href="#AnUntitledStory">An Untitled Story (PC)</a></small>
                 <small><a href="#ANIMALWELL">ANIMAL WELL (PC)</a></small>
                 <small><a href="#Anodyne">Anodyne (PC)</a></small>
+                <small><a href="#AnotherCrabsTreasure">Another Crab's Treasure (PC)</a></small>
                 <small><a href="#ApeEscape">Ape Escape (PSX)</a></small>
                 <small><a href="#Aquaria">Aquaria (PC)</a></small>
                 <small><a href="#ArchipIDLE">ArchipIDLE (Web)</a></small>
@@ -146,6 +147,7 @@
                 <small><a href="#HollowKnight">Hollow Knight (PC)</a></small>
                 <small><a href="#HuniePop2DoubleDate">HuniePop 2: Double Date (PC)</a></small>
                 <small><a href="#Hylics2">Hylics 2 (PC)</a></small>
+                <small><a href="#Increlution">Increlution (PC)</a></small>
                 <small><a href="#Inscryption">Inscryption (PC)</a></small>
                 <small><a href="#IntoTheBreach">Into the Breach (PC)</a></small>
                 <small><a href="#IttleDew2">Ittle Dew 2+ (PC)</a></small>
@@ -439,6 +441,13 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1121290232688545792">Link</a>]</li>
                 </ul>
 
+                <h3><span id="AnotherCrabsTreasure"></span> Another Crab's Treasure (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Automagic00/ACT-AP-Client-Plugin/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1239467743116525688">Link</a>]</li>
+                </ul>
+
                 <h3><span id="ApeEscape"></span> Ape Escape (PSX)</h3>
 
                 <ul>
@@ -451,7 +460,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Beta APWorld + Game Mod</strong> 1.3.x versions [<a href="https://github.com/tioui/Aquaria_Randomizer/releases">Link</a>]</li>
+                    <li><strong>Beta APWorld + Game Mod</strong> 1.4.x versions [<a href="https://github.com/tioui/Aquaria_Randomizer/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Aquaria/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1257452465272389687">Link</a>]</li>
                 </ul>
@@ -960,6 +969,13 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1043593298247417929">Link</a>]</li>
                 </ul>
 
+                <h3><span id="Increlution"></span> Increlution (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod + Setup Guide</strong> [<a href="https://github.com/spineraks-org/ArchipelagoIncrelution/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1276680264768032778">Link</a>]</li>
+                </ul>
+
                 <h3><span id="Inscryption"></span> Inscryption (PC)</h3>
 
                 <ul>
@@ -991,6 +1007,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/ArchipelaGOAL/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/LegsLegsLegs/Jak-and-Daxter-Poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/ArchipelaGOAL/Archipelago/blob/main/worlds/jakanddaxter/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1138467653552451606">Link</a>]</li>
                 </ul>
@@ -1296,6 +1313,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Electro1512/MetroidAPrime/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/lilDavid/MetroidPrimeAP-PoptrackerPack/releases">Link</a>]</li>
+                    <li><strong>Tracker (Items)</strong> [<a href="https://github.com/UltiNaruto/MPItemTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Electro1512/MetroidAPrime/blob/main/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1172631093837570068">Link</a>]</li>
                 </ul>
@@ -1802,6 +1820,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Berserker66/ArchipelagoSubnauticaModSrc/releases">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/868938368346628096/1284665153157333033">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/lurch9229/SubnauticaAP_maptracker_lurch9229/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Subnautica/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/868938368346628096">Link</a>]</li>
@@ -1811,7 +1830,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Beta APWorld + Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1274570378164965420">Link</a>]</li>
+                    <li><strong>Beta APWorld + Game Mod</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1148330488482767008/1283619338313797674">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2922217554">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SerpentAI/TerrariaAPTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Terraria/setup/en">Link</a>]</li>
