--- a/index.html
+++ b/index.html
@@ -45,6 +45,70 @@
                     </p>
                 </header>
 
+                <h2 id="W202437">Week of September 9-15, 2024</h2>
+
+                <ul>
+                    <li><strong>AP Release Candidate</strong> 0.5.1 RC1 [<a href="https://discord.com/channels/731205301247803413/731214280439103580/1285001183508824135">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> ANIMAL WELL [<a href="apworlds.html#ANIMALWELL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ape Escape [<a href="apworlds.html#ApeEscape">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> HuniePop 2: Double Date [<a href="apworlds.html#HuniePop2DoubleDate">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Jak and Daxter: The Precursor Legacy [<a href="apworlds.html#JakAndDaxterThePrecursorLegacy">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> KINGDOM HEARTS Birth by Sleep FINAL MIX [<a href="apworlds.html#KINGDOMHEARTSBirthBySleepFINALMIX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokémon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sly Cooper and the Thievius Raccoonus [<a href="apworlds.html#SlyCooperAndTheThieviusRaccoonus">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Legend of Zelda: Oracle of Ages [<a href="apworlds.html#TheLegendOfZeldaOracleOfAges">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Universal Tracker [<a href="apworlds.html#UniversalTracker">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Terraria [<a href="apworlds.html#Terraria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSouls3">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> Subnautica [<a href="apworlds.html#Subnautica">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> Terraria [<a href="apworlds.html#Terraria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Against the Storm [<a href="apworlds.html#AgainstTheStorm">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> HuniePop 2: Double Date [<a href="apworlds.html#HuniePop2DoubleDate">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shapez [<a href="apworlds.html#Shapez">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sly Cooper and the Thievius Raccoonus [<a href="apworlds.html#SlyCooperAndTheThieviusRaccoonus">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Messenger [<a href="apworlds.html#TheMessenger">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Another Crab's Treasure [<a href="apworlds.html#AnotherCrabsTreasure">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Increlution [<a href="apworlds.html#Increlution">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Jak and Daxter: The Precursor Legacy [<a href="apworlds.html#JakAndDaxterThePrecursorLegacy">Link</a>]</li>
+                    <li><strong>New Tracker</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202436">Week of September 2-8, 2024</h2>
 
                 <ul>
